[package]
name = "rssc"
version = "0.1.0"
edition = "2021"

[dependencies]
cty = "0.2.2"
libc = "0.2"

[lib]
name = "rssc"
path = "src/lib.rs"

[features]
default = [
  "SSC_File_createSecret",
  "SSC_getExecutablePath",
  "SSC_getNumberProcessors",
  "SSC_getTotalSystemMemory",
  "SSC_getAvailableSystemMemory",
  ]
# File
SSC_File_createSecret = []
# Process
SSC_getExecutablePath = []
SSC_getNumberProcessors = []
# Memory
SSC_getTotalSystemMemory = []
SSC_getAvailableSystemMemory = []
Disable = []
